# GW-integration

./: .pre-commit-config.yaml  LICENSE  README.md  integrator.py  integrator_dimensionless.py  plot_evolution.py  pyproject.toml
benchmarking/: benchmarking.py  solvers.py
src/: GWintegrator.py  integrator.py
